// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextfieldBase /> should match snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root makeStyles-root-3 makeStyles-root-7"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root makeStyles-cssLabel-1 makeStyles-cssLabel-5 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink="true"
    >
      Test
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-fontColor-2 makeStyles-fontColor-6 MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input"
        type="text"
        value="Value"
      />
    </div>
  </div>
</div>
`;

exports[`<TextfieldBase /> should match snapshot 2`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root makeStyles-root-10 makeStyles-root-14"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root makeStyles-cssLabel-8 makeStyles-cssLabel-12 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink="true"
    >
      Test
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-fontColor-9 makeStyles-fontColor-13 MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input"
        type="text"
        value="Value"
      />
    </div>
  </div>
</div>
`;

exports[`<TextfieldBase /> should match snapshot 3`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root makeStyles-root-17 makeStyles-root-21"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root makeStyles-cssLabel-15 makeStyles-cssLabel-19 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink Mui-error Mui-error MuiFormLabel-filled"
      data-shrink="true"
    >
      Test
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-fontColor-16 makeStyles-fontColor-20 Mui-error Mui-error MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-invalid="true"
        class="MuiInputBase-input MuiInput-input"
        type="text"
        value="Value"
      />
    </div>
    <p
      class="MuiFormHelperText-root Mui-error MuiFormHelperText-filled"
    >
      error
    </p>
  </div>
</div>
`;

exports[`<TextfieldBase /> should match snapshot 4`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root makeStyles-root-24 makeStyles-root-28"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root makeStyles-cssLabel-22 makeStyles-cssLabel-26 MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink="true"
    >
      Test
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-fontColor-23 makeStyles-fontColor-27 MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input"
        type="text"
        value="Value"
      />
    </div>
    
  </div>
</div>
`;
